# tscraper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUGS.md  CLAUDE.md  Dockerfile  MONITORING.md  README.md  auth.py  config.yaml.example  docker-compose.monitoring.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: build.yml  docker-publish.yml  docs.yml
docs/: changelog.md  index.md
docs/development/: architecture.md  contributing.md  known-issues.md
docs/getting-started/: authentication.md  configuration.md  installation.md
docs/monitoring/: alerts.md  external-grafana.md  metrics.md  setup.md
monitoring/: alerts.yml  prometheus.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: tscraper.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: conftest.py  test_config.py  test_scraper.py
tscraper/: health.py  metrics.py  tscraper.py
